Fixed spacing bugs with recruitment links.

--- a/components/Recruitment/Recruitment.css
+++ b/components/Recruitment/Recruitment.css
@@ -41,7 +41,13 @@
   display: flex;
   flex-direction: column;
   margin: 0;
-  padding: 30px;
+  padding: 10px 30px 30px 30px;
+}
+
+@media screen and (min-width: 930px) {
+  .container {
+    padding: 30px;
+  }
 }
 
 .buttontext {
@@ -60,4 +66,8 @@
   height: 32px;
   width: 32px;
   vertical-align: middle;
+}
+
+tr.space > td {
+  padding-bottom: 10px;
 }
